--- a/public/login.html
+++ b/public/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 class="main-title">Videoteca</h1>
     <div class="form-container">
         <h2>Iniciar Sesión</h2>
         <form id="login-form">
