--- a/public/mensajes.html
+++ b/public/mensajes.html
@@ -1,312 +1,119 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Chat/mensajes</title>
-  <style>
+    <meta charset="UTF-8">
+    <title>Chat/mensajes</title>
+    <style>
     * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      display: flex;
-      height: 100vh;
-      font-family: 'Segoe UI', sans-serif;
-    }
+    body { margin: 0; font-family: sans-serif; display: flex; height: 100vh; background: #2f3136; color: white; }
 
     .sidebar {
-      width: 80px;
-      background: #2f3136;
+      width: 100px; /* ancho más grueso */
+      background: #202225;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding-top: 10px;
+      padding: 10px 0;
       overflow-y: auto;
     }
 
-    .user-icon {
+    #userList {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center; /* centra los items horizontalmente */
+    }
+
+    #userList li {
+      width: 60px; /* un poco más ancho que el avatar */
+      display: flex;
+      justify-content: center; /* centra la imagen horizontalmente */
+      margin-bottom: 15px; /* espacio entre avatares */
+      cursor: pointer;
+    }
+
+    #userList li img {
       width: 50px;
       height: 50px;
-      background-color: #7289da;
       border-radius: 50%;
-      color: white;
-      font-size: 20px;
-      margin: 10px 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      cursor: pointer;
-    }
-
-    .tooltip {
-      display: none;
-      position: absolute;
-      top: 50%;
-      left: 60px;
-      transform: translateY(-50%);
-      background-color: #23272a;
-      color: white;
-      padding: 5px 10px;
-      border-radius: 5px;
-      white-space: nowrap;
-    }
-
-    .user-icon:hover .tooltip {
+      object-fit: cover;
       display: block;
+      border: 2px solid transparent;
+      transition: transform 0.2s, border-color 0.2s;
     }
 
-    .chat-container {
+    #userList li img:hover {
+      transform: scale(1.1);
+      border-color: #7289da;
+    }
+
+    .chat {
       flex: 1;
-      background: #36393f;
       display: flex;
       flex-direction: column;
     }
 
-    .chat-header {
-      background: #202225;
-      padding: 15px;
-      color: white;
-      font-weight: bold;
-      font-size: 18px;
-      border-bottom: 1px solid #2f3136;
-    }
-
-    .chat-messages {
+    .messages {
       flex: 1;
-      overflow-y: auto;
       padding: 20px;
-      color: white;
-      display: flex;
-      flex-direction: column;
+      overflow-y: auto;
+      background: #36393f;
     }
 
-    .chat-message {
-      background: #2f3136;
-      border-radius: 8px;
+    .message {
+      margin-bottom: 15px;
+    }
+
+    .message .sender {
+      font-weight: bold;
+      color: #7289da;
+    }
+
+    .input {
       padding: 10px;
-      margin-bottom: 10px;
-      max-width: 70%;
-    }
-
-    .from-me {
-      align-self: flex-end;
-      background: #7289da;
-    }
-
-    .from-other {
-      align-self: flex-start;
-    }
-
-    .chat-input {
-      border-top: 1px solid #2f3136;
-      padding: 10px;
-      display: flex;
       background: #40444b;
+      display: flex;
     }
 
-    .chat-input textarea {
+    .input input {
       flex: 1;
-      resize: none;
       padding: 10px;
-      border-radius: 5px;
       border: none;
-      font-size: 14px;
+      background: #2f3136;
+      color: white;
+      border-radius: 5px;
     }
 
-    .chat-input button {
+    .input button {
       margin-left: 10px;
-      padding: 10px 20px;
-      background-color: #7289da;
+      padding: 10px 15px;
+      background: #7289da;
       border: none;
-      border-radius: 5px;
       color: white;
+      border-radius: 5px;
       cursor: pointer;
     }
 
-    .chat-input button:hover {
-      background-color: #5b6eae;
-    }
-
-    .video-title {
-      font-size: 12px;
-      color: #999;
-    }
   </style>
 </head>
 <body>
 
-  <div class="sidebar" id="sidebar"></div>
+<div class="sidebar">
+    
+    <ul id="userList"></ul>
+</div>
 
-  <div class="chat-container">
-    <div class="chat-header" id="chat-header">Selecciona un usuario</div>
-    <div class="chat-messages" id="chat-messages"></div>
-    <div class="chat-input">
-      <textarea id="chat-text" placeholder="Escribe un mensaje..." rows="2"></textarea>
-      <button onclick="enviarMensaje()">Enviar</button>
+<div class="chat">
+    <div id="messages" class="messages"></div>
+    <div class="input">
+        <input type="text" id="messageInput" placeholder="Escribe un mensaje...">
+        <button id="sendBtn">Enviar</button>
     </div>
-  </div>
+</div>
 
-  <script>
-    const token = localStorage.getItem('token');
-    if (!token) {
-      alert('Debes iniciar sesión');
-      window.location.href = '/login.html';
-    }
-
-    const decoded = JSON.parse(atob(token.split('.')[1]));
-    let mensajesGlobal = [];
-    let usuariosUnicos = {};
-    let usuarioSeleccionado = null;
-    let videoRelacionado = null;
-
-    fetch('http://localhost:5000/messages', {
-      headers: { Authorization: `Bearer ${token}` },
-    })
-    .then((res) => res.json())
-    .then((data) => {
-      mensajesGlobal = data.filter(msg =>
-        msg.receiverId._id === decoded.id || msg.senderId._id === decoded.id
-      );
-      renderSidebar(mensajesGlobal);
-    });
-
-    function renderSidebar(mensajes) {
-      const sidebar = document.getElementById('sidebar');
-      usuariosUnicos = {};
-
-      mensajes.forEach((msg) => {
-        const partner = msg.senderId._id === decoded.id ? msg.receiverId : msg.senderId;
-        usuariosUnicos[partner._id] = partner;
-      });
-
-      Object.values(usuariosUnicos).forEach((user) => {
-        const div = document.createElement('div');
-        div.className = 'user-icon';
-        if (user.avatar) {
-        div.innerHTML = `<img src="${user.avatar}" alt="${user.name}" style="width:100%; height:100%; border-radius:50%;" />`;
-      } else {
-        div.innerHTML = `
-        ${user.name.charAt(0).toUpperCase()}
-        `;
-      } 
-        div.innerHTML += `<div class="tooltip">${user.name}</div>`;
-        div.onclick = () => seleccionarUsuario(user._id, user.name);
-        sidebar.appendChild(div);
-      });
-    }
-
-    function seleccionarUsuario(userId, name) {
-      usuarioSeleccionado = userId;
-      document.getElementById('chat-header').textContent = name;
-      const mensajes = mensajesGlobal.filter(
-        msg =>
-          (msg.senderId._id === userId && msg.receiverId._id === decoded.id) ||
-          (msg.senderId._id === decoded.id && msg.receiverId._id === userId)
-      );
-
-      const chat = document.getElementById('chat-messages');
-      chat.innerHTML = '';
-
-      mensajes.forEach((msg) => {
-      const div = document.createElement('div');
-      div.className = 'chat-message ' + (msg.senderId._id === decoded.id ? 'from-me' : 'from-other');
-
-      const avatarUrl = msg.senderId.avatar || ''; // Avatar del emisor del mensaje
-      const avatarImg = avatarUrl ? `<img src="${avatarUrl}" alt="Avatar" style="width:30px; height:30px; border-radius:50%; margin-right:10px; vertical-align:middle;" />` : '';
-
-      div.innerHTML = `
-        <div style="display:flex; align-items:center; margin-bottom:5px;">
-          ${avatarImg}
-          <strong>${msg.senderId.name}</strong>
-        </div>
-        <div class="video-title">🎬 ${msg.videoId.title}</div>
-        <div>${msg.content}</div>
-      `;
-      chat.appendChild(div);
-    });
-
-
-      chat.scrollTop = chat.scrollHeight;
-    }
-
-    const socket = io('http://localhost:5000');
-
-socket.on('connect', () => {
-  console.log('Conectado a socket:', socket.id);
-  // Emitimos join con el id del usuario para unirse a su sala
-  socket.emit('join', decoded.id);
-});
-
-// Escuchar nuevos mensajes en tiempo real
-socket.on('newMessage', (message) => {
-  // Si el mensaje es para el usuario actual y la conversación es con el usuario seleccionado
-  if (
-    (message.receiverId._id === decoded.id && message.senderId._id === usuarioSeleccionado) ||
-    (message.senderId._id === decoded.id && message.receiverId._id === usuarioSeleccionado)
-  ) {
-    mensajesGlobal.push(message);
-    agregarMensajeAlChat(message);
-  }
-
-  // Si no es la conversación abierta, se puede actualizar la lista de usuarios o notificar (opcional)
-});
-
-// Función para agregar un mensaje nuevo a la interfaz sin recargar todo
-function agregarMensajeAlChat(msg) {
-  const chat = document.getElementById('chat-messages');
-  const div = document.createElement('div');
-  div.className = 'chat-message ' + (msg.senderId._id === decoded.id ? 'from-me' : 'from-other');
-  div.innerHTML = `
-    <div class="video-title">🎬 ${msg.videoId.title}</div>
-    ${msg.content}
-  `;
-  chat.appendChild(div);
-  chat.scrollTop = chat.scrollHeight;
-}
-
-    function enviarMensaje() {
-  const content = document.getElementById('chat-text').value.trim();
-  if (!usuarioSeleccionado || !videoRelacionado || !content) return;
-
-  fetch('http://localhost:5000/send-message', {
-    method: 'POST',
-    headers: {
-      'Authorization': `Bearer ${token}`,
-      'Content-Type': 'application/json',
-    },
-    body: JSON.stringify({
-      receiverId: usuarioSeleccionado,
-      videoId: videoRelacionado,
-      content
-    }),
-  })
-  .then((res) => res.json())
-  .then((data) => {
-    if (data.message) {
-      document.getElementById('chat-text').value = '';
-
-      // Emitir mensaje por socket para actualizar receptor en tiempo real
-      socket.emit('sendMessage', {
-        senderId: decoded.id,
-        receiverId: usuarioSeleccionado,
-        videoId: { _id: videoRelacionado, title: data.videoTitle || 'Video' },
-        content
-      });
-
-      // Actualizar chat del emisor
-      mensajesGlobal.push({
-        senderId: { _id: decoded.id },
-        receiverId: { _id: usuarioSeleccionado },
-        videoId: { _id: videoRelacionado, title: data.videoTitle || 'Video' },
-        content,
-        createdAt: new Date().toISOString()
-      });
-      agregarMensajeAlChat(mensajesGlobal[mensajesGlobal.length - 1]);
-      return;
-    }
-
-    alert('Error: ' + (data.error || 'No se pudo enviar'));
-  });
-}
-  </script>
+<script src="mensajes.js"></script>
 </body>
 </html>
