--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="#" onclick="toggleConfigMenu()">Configuración</a></li>
             <li><a href="comunidad.html">Comunidad</a></li>
-            <li><a href="#">Estadísticas</a></li>
+            <li><a href="normas.html">Normas</a></li>
             <li><a href="mensajes.html">Mensajes</a></li>
         </ul>
     </div>
