--- a/public/mensajes.html
+++ b/public/mensajes.html
@@ -8,7 +8,7 @@
     body { margin: 0; font-family: sans-serif; display: flex; height: 100vh; background: #2f3136; color: white; }
 
     .sidebar {
-      width: 100px; /* ancho más grueso */
+      width: 100px; 
       background: #202225;
       display: flex;
       flex-direction: column;
@@ -28,7 +28,7 @@
     }
 
     #userList li {
-      width: 60px; /* un poco más ancho que el avatar */
+      width: 60px; 
       display: flex;
       justify-content: center; /* centra la imagen horizontalmente */
       margin-bottom: 15px; /* espacio entre avatares */
@@ -104,6 +104,29 @@
 <div class="sidebar">
     
     <ul id="userList"></ul>
+    <a href="dashboard.html" style="
+    margin-top: auto;
+    padding: 12px;
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 4px;
+    background-color: #7289da;
+    border-radius: 8px;
+    width: 80%;
+    margin-bottom: 10px;
+    transition: background-color 0.3s;
+">
+    🏠
+    <span style="font-size: 16px;">Dashboard</span>
+</a>
+
+
 </div>
 
 <div class="chat">
