--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -39,7 +39,7 @@
 
         <div id="upload-form" class="upload-form" style="display:none;">
             <h3>Subir Video</h3>
-            <input type="file" id="video-file" />
+            <input type="file" id="video-file" accept="video/*" />
             <input type="text" id="video-title" placeholder="Título del video" />
             <input type="text" id="video-description" placeholder="Descripción del video" />
             <button onclick="uploadVideo()">Subir</button>
