--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
             const name = document.getElementById('name').value;
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
-
-            const response = await fetch('http://localhost:5000/register', {
+            //const response = await fetch('http://localhost:5000/register', {
+            const response = await fetch('/register', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ name, email, password }),
