--- a/public/login.html
+++ b/public/login.html
@@ -24,8 +24,8 @@
             
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
-            
-            const response = await fetch('http://localhost:5000/login', {
+            //const response = await fetch('http://localhost:5000/login', {
+            const response = await fetch('/login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
